syntax = "proto3";

package catalog;

option go_package = "internal/protos";

service CatalogService {
  rpc GetProductsSendBasket (ProductIdsRequest) returns (ProductBasketList);
  rpc GetProductsSendOrder (ProductIdsRequest) returns (ProductOrderList);
}

message ProductIdsRequest {
  repeated string product_ids = 1; 
}

message ProductBasketList {
  repeated ProductBasket products = 1; 
}

message ProductOrderList {
  repeated ProductOrder products = 1; 
}

message ProductBasket {
  string id = 1; 
  string title = 2;          
  string author = 3;
  int64 discount_percentage = 4;        
  string image_url = 5;
  float price = 6;   
}

message ProductOrder {
  string id = 1; 
  string title = 2;          
  string author = 3;       
  string image_url = 5; 
}
